# PyCTAKES

./: .gitignore  .pre-commit-config.yaml  ANNOUNCEMENT.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  LICENSE  PYPI_PUBLISHING_GUIDE.md  README.md  README_OLD.md  ROADMAP.md  V1_IMPLEMENTATION_SUMMARY.md  mkdocs.yml  pyproject.toml  rename_script.py  verify_implementation.py
.github/workflows/: ci.yml  docs.yml
docs/: changelog.md  conf.py  contributing.md  examples.md  index.md  installation.md  quickstart.md  roadmap.md  web_index.md
docs/advanced/: custom-annotators.md  performance.md  umls.md
docs/api/: annotators.md  pipeline.md  types.md
docs/user-guide/: annotators.md  cli.md  configuration.md  pipeline.md
examples/: basic_usage.py  comprehensive_demo.py  quickstart.py
site/: 404.html  index.html
site/advanced/custom-annotators/: index.html
site/advanced/performance/: index.html
site/api/annotators/: index.html
site/api/pipeline/: index.html
site/api/types/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/examples/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/roadmap/: index.html
site/user-guide/annotators/: index.html
site/user-guide/cli/: index.html
site/user-guide/configuration/: index.html
site/user-guide/pipeline/: index.html
site/web_index/: index.html
src/pyctakes/: __init__.py  cli.py  pipeline.py  types.py
src/pyctakes/annotators/: __init__.py  assertion.py  base.py  tokenization.py
src/pytakes/: __init__.py  cli.py  pipeline.py  types.py
src/pytakes/agents/: __init__.py  prompts.py
src/pytakes/annotators/: __init__.py  base.py  ner.py  sections.py  umls.py
tests/: conftest.py  test_annotators.py  test_integrated_pipeline.py  test_pipeline.py  test_types.py
